# adsp-genai-midterm-bfg

./: .env.example  README.md  eval_metrics  pyproject.toml
data/: qa_set.csv
notebooks/: basic_rag_demo.ipynb
src/dsi_rag_qa/rag_framework/: basic_graph.py
src/dsi_rag_qa/utils/: data_ingestion_utils.py  embedding_utils.py  prompt_utils.py
ui/: app.py
